# FISH-Tuning-Implementation

./: README.md  pyproject.toml  requirements.txt
configs/: base_config.yaml
configs/experiments/: bert_sst2.yaml  deberta_mnli.yaml  deberta_mnli_fish_25.yaml  minilm_qnli_fish_25.yaml  prajjwal_tinymodel_smoketest.yaml  tinyllama_rte_fish_25.yaml
scripts/: run_experiment.py
src/fish_tuning/: __init__.py  fisher_utils.py  trainer.py
